# personalChat

./: .gitignore  DESCRIPTION.md  INTERVIEW_SUMMARY.md  README.md  pyproject.toml
src/: embedding.py  main.py  memory.py  responder.py
tests/: test_memory.py
