[project]
name = "chat-agent"
version = "0.1.0"
description = "CLI chat agent with memory"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.4.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
